feat: add content to header in cv.html

--- a/cv.html
+++ b/cv.html
@@ -8,10 +8,18 @@
 </head>
 <body>
   <header>
-    <div class="avatar">
-      <img src="imgs/avatar.jpg">
+    <div class="inform">
+      <img class="avatar" src="imgs/avatar.jpg">
+      <div class="additional_information">
+        <h1>Daria Erohova</h1>
+        <p>.NET Developer</p>
+        <div class="contacts">
+          <p>Phone: + 375(44)46-65-657</p>
+          <p>Email: dariaerohova21@gmail.com</p>
+          <p>Социальные сети: <a href="https://vk.com/dariaero">VK</a></p>
+        </div>
+      </div>
     </div>
-    <h1>Daria Erohova</h1>
 </header>
 </body>
 </html>
