fix: change link to css file

--- a/cv.html
+++ b/cv.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="style.css">
-  <title>Document</title>
-</head>
-<body>
-  <header>
-    <div class="inform">
-      <img class="avatar" src="imgs/avatar.jpg">
-      <div class="additional_information">
-        <h1>Daria Erohova</h1>
-        <p>.NET Developer</p>
-        <div class="contacts">
-          <p>Phone: + 375(44)46-65-657</p>
-          <p>Email: dariaerohova21@gmail.com</p>
-          <p>Социальные сети: <a href="https://vk.com/dariaero">VK</a></p>
-        </div>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <div class="inform">
+        <img class="avatar" src="imgs/avatar.jpg">
+          <div class="additional_information">
+            <h1>Daria Erohova</h1>
+            <p>.NET Developer</p>
+            <div class="contacts">
+              <p>Phone: + 375(44)46-65-657</p>
+              <p>Email: dariaerohova21@gmail.com</p>
+              <p>Социальные сети: <a href="https://vk.com/dariaero">VK</a></p>
+            </div>
+          </div>
       </div>
-    </div>
-</header>
-</body>
+    </header>
+  </body>
 </html>
