feat: add info_article in cv.html

--- a/cv.html
+++ b/cv.html
@@ -22,7 +22,11 @@
       </div>
     </header>
     <main>
-      
+      <div class="info_article">
+        <p> I'm a 2nd year student of Software Engineering at the Belarusian-Russian University. I specialize in backend development on the dot NET platform, 
+            in the future I want to connect my professional activities with fullstack development.
+        </p>
+      </div>
     </main>
   </body>
 </html>
