feat: add block main and header to block div with class wripper

--- a/cv.html
+++ b/cv.html
@@ -7,26 +7,28 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <div class="inform">
-        <img class="avatar" src="imgs/avatar.jpg">
-          <div class="additional_information">
-            <h1>Daria Erohova</h1>
-            <p>.NET Developer</p>
-            <div class="contacts">
-              <p>Phone: + 375(44)46-65-657</p>
-              <p>Email: dariaerohova21@gmail.com</p>
-              <p>Социальные сети: <a href="https://vk.com/dariaero">VK</a></p>
+    <div class="wripper">
+      <header>
+        <div class="inform">
+          <img class="avatar" src="imgs/avatar.jpg">
+            <div class="additional_information">
+              <h1>Daria Erohova</h1>
+              <p>.NET Developer</p>
+              <div class="contacts">
+                <p>Phone: + 375(44)46-65-657</p>
+                <p>Email: dariaerohova21@gmail.com</p>
+                <p>Социальные сети: <a href="https://vk.com/dariaero">VK</a></p>
+              </div>
             </div>
-          </div>
-      </div>
-    </header>
-    <main>
-      <div class="info_article">
-        <p> I'm a 2nd year student of Software Engineering at the Belarusian-Russian University. I specialize in backend development on the dot NET platform, 
+        </div>
+      </header>
+      <main>
+        <div class="info_article">
+          <p> I'm a 2nd year student of Software Engineering at the Belarusian-Russian University. I specialize in backend development on the dot NET platform, 
             in the future I want to connect my professional activities with fullstack development.
-        </p>
-      </div>
-    </main>
+          </p>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
