feat: add table of information in cv.html and styles for this table in style.css

--- a/cv.html
+++ b/cv.html
@@ -28,6 +28,18 @@
             in the future I want to connect my professional activities with fullstack development.
           </p>
         </div>
+        <div class="info_table">
+          <table>
+            <tr><th>Hard skills</th><th>Soft skills</th></tr>
+            <tr><td>Knowledge of C# and Java programming languages</td><td>Professional interest</td></tr>
+            <tr><td>Knowledge of Git</td><td>Teamwork skills</td></tr>
+            <tr><td>Mastery of HTML, CSS</td><td>Responsibility</td></tr>
+            <tr><td>SQL skills</td><td>Skills in managing team schedules and tasks</td></tr>
+            <tr><td>Skills in creating mobile applications for Android</td><td>Ability to speak in public</td></tr>
+            <tr><td>Skills of working with SQL Server Management Studio DBMS </td><td></td></tr>
+            <tr><td>Profound knowledge of algorithmization and Boolean algebra basics</td><td></td></tr>
+          </table>
+        </div>
       </main>
     </div>
   </body>
