feat: add block of information in the lists in cv.html

--- a/cv.html
+++ b/cv.html
@@ -40,6 +40,30 @@
             <tr><td>Profound knowledge of algorithmization and Boolean algebra basics</td><td></td></tr>
           </table>
         </div>
+        <div class="information_in_list">
+          <p id="languages">Languages</p>
+          <ul>
+            <li>Russian (Native)</li>
+            <li>English (B1)</li>
+          </ul>
+          <p id="courses">Courses</p>
+          <ul>
+            <li>Course "ASP.NET Core MVC for .NET 5. Part One" by Udemy</li>
+            <li>Course "Python" by Stepik</li> 
+            <li>Course "Command Line Basics" by Hexlet</li>
+            <li>Course "Introduction to Git" by Hexlet</li>
+            <li>Course "Introduction to the Internet" by Hexlet</li>
+            <li>Course ".NET DEVELOPMENT. Self-study. The basic level" by epam training</li>
+            <li>Course "Fundamentals of Java" by Udemy</li>
+            <li>Course "Mobile development. Basics of Kotlin" by Udemy</li>
+          </ul>
+          <p id="projects">Projects</p>
+          <ul>
+            <li>Start-up project "Mobile application for intelligent management of welding processes" (Kotlin, Java, Android Studio) <a href="https://github.com/VladislavDobrihlopez/WeldingStartup">GitHub проекта</a></li>
+            <li>A pixel-art 2D "Apple pie" quest game (C#, Unity) <a href="https://github.com/DariaPers/Quest">GitHub игры</a></li> 
+            <li>Medical Assistant - a mobile app (Xamarin)</li>
+          </ul>
+        </div>
       </main>
     </div>
   </body>
