--- a/cv.html
+++ b/cv.html
@@ -41,12 +41,12 @@
           </table>
         </div>
         <div class="information_in_list">
-          <p id="languages">Languages</p>
+          <h2 id="languages">Languages</h2>
           <ul>
             <li>Russian (Native)</li>
             <li>English (B1)</li>
           </ul>
-          <p id="courses">Courses</p>
+          <h2 id="courses">Courses</h2>
           <ul>
             <li>Course "ASP.NET Core MVC for .NET 5. Part One" by Udemy</li>
             <li>Course "Python" by Stepik</li> 
@@ -57,7 +57,7 @@
             <li>Course "Fundamentals of Java" by Udemy</li>
             <li>Course "Mobile development. Basics of Kotlin" by Udemy</li>
           </ul>
-          <p id="projects">Projects</p>
+          <h2 id="projects">Projects</h2>
           <ul>
             <li>Start-up project "Mobile application for intelligent management of welding processes" (Kotlin, Java, Android Studio) <a href="https://github.com/VladislavDobrihlopez/WeldingStartup">GitHub проекта</a></li>
             <li>A pixel-art 2D "Apple pie" quest game (C#, Unity) <a href="https://github.com/DariaPers/Quest">GitHub игры</a></li> 
