feat: add block of code in block of information in the lists in cv.html

--- a/cv.html
+++ b/cv.html
@@ -63,6 +63,19 @@
             <li>A pixel-art 2D "Apple pie" quest game (C#, Unity) <a href="https://github.com/DariaPers/Quest">GitHub игры</a></li> 
             <li>Medical Assistant - a mobile app (Xamarin)</li>
           </ul>
+          <h2 id="code_example">Example of code</h2>
+          <pre>
+            <code>
+              namespace Lab_4_Set<Br>
+              {<Br>
+                internal class TypeValidationException : Exception<Br>
+                {<Br>
+                    public TypeValidationException(string message)<Br>
+                      :base(message) { }<Br>
+                }<Br>
+              }
+            </code>
+           </pre>
         </div>
       </main>
     </div>
