feat: add footer in cv.html and styles for this in style.css

--- a/cv.html
+++ b/cv.html
@@ -80,6 +80,11 @@
             </code>
            </pre>
         </div>
+        <footer>
+          <div class="footer_info">
+              Created by DariaPers in 2023. GitHub: <a href="https://github.com/DariaPers">click here</a>
+          </div>
+      </footer>
       </main>
     </div>
   </body>
