--- a/cv.html
+++ b/cv.html
@@ -21,6 +21,14 @@
               </div>
             </div>
         </div>
+        <div class="navigation_block">
+          <nav>
+            <a href="#projects">Projects</a>
+            <a href="#languages">Languages</a>
+            <a href="#courses">Courses</a>
+            <a href="#code_example">Example of code</a>
+          </nav>
+        </div>
       </header>
       <main>
         <div class="info_article">
