fix: add atribute alt to tag img

--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
     <div class="wripper">
       <header>
         <div class="inform">
-          <img class="avatar" src="imgs/avatar.jpg">
+          <img class="avatar" src="imgs/avatar.jpg" alt="my_photo">
             <div class="additional_information">
               <h1>Daria Erohova</h1>
               <p>.NET Developer</p>
