fix: fix russian words

--- a/cv.html
+++ b/cv.html
@@ -17,7 +17,7 @@
               <div class="contacts">
                 <p>Phone: + 375(44)46-65-657</p>
                 <p>Email: dariaerohova21@gmail.com</p>
-                <p>Социальные сети: <a href="https://vk.com/dariaero">VK</a></p>
+                <p>Social media: <a href="https://vk.com/dariaero">VK</a></p>
               </div>
             </div>
         </div>
@@ -69,8 +69,8 @@
           <hr>
           <h2 id="projects">Projects</h2>
           <ul>
-            <li>Start-up project "Mobile application for intelligent management of welding processes" (Kotlin, Java, Android Studio) <a href="https://github.com/VladislavDobrihlopez/WeldingStartup">GitHub проекта</a></li>
-            <li>A pixel-art 2D "Apple pie" quest game (C#, Unity) <a href="https://github.com/DariaPers/Quest">GitHub игры</a></li> 
+            <li>Start-up project "Mobile application for intelligent management of welding processes" (Kotlin, Java, Android Studio) <a href="https://github.com/VladislavDobrihlopez/WeldingStartup">GitHub of project</a></li>
+            <li>A pixel-art 2D "Apple pie" quest game (C#, Unity) <a href="https://github.com/DariaPers/Quest">GitHub of game</a></li> 
             <li>Medical Assistant - a mobile app (Xamarin)</li>
           </ul>
           <hr>
