fix: change personal information

--- a/cv.html
+++ b/cv.html
@@ -16,36 +16,35 @@
               <p>.NET Developer</p>
               <div class="contacts">
                 <p>Phone: + 375(44)46-65-657</p>
-                <p>Email: dariaerohova21@gmail.com</p>
+                <p>E-mail: dariaerohova21@gmail.com</p>
                 <p>Social media: <a href="https://vk.com/dariaero">VK</a></p>
+                <p>Address: Thre Republic of Belarus, Mogilev</p>
               </div>
             </div>
         </div>
         <div class="navigation_block">
           <nav>
-            <a href="#projects">Projects</a>
+            <a href="#work_experience">Work experience</a>
             <a href="#languages">Languages</a>
             <a href="#courses">Courses</a>
-            <a href="#code_example">Example of code</a>
           </nav>
         </div>
       </header>
       <main>
         <div class="info_article">
-          <p> I'm a 2nd year student of Software Engineering at the Belarusian-Russian University. I specialize in backend development on the dot NET platform, 
-            in the future I want to connect my professional activities with fullstack development.
+          <p> I'm a third-year student of speciality "Software Engineering" at the Belarusian-Russian University. 
+            I have knowledge of C#, ASP.NET MVC. Striving to apply my skills and learn new technologies in a collaborative environment.
           </p>
         </div>
         <div class="info_table">
           <table>
             <tr><th>Hard skills</th><th>Soft skills</th></tr>
-            <tr><td>Knowledge of C# and Java programming languages</td><td>Professional interest</td></tr>
-            <tr><td>Knowledge of Git</td><td>Teamwork skills</td></tr>
-            <tr><td>Mastery of HTML, CSS</td><td>Responsibility</td></tr>
-            <tr><td>SQL skills</td><td>Skills in managing team schedules and tasks</td></tr>
-            <tr><td>Skills in creating mobile applications for Android</td><td>Ability to speak in public</td></tr>
-            <tr><td>Skills of working with SQL Server Management Studio DBMS </td><td></td></tr>
-            <tr><td>Profound knowledge of algorithmization and Boolean algebra basics</td><td></td></tr>
+            <tr><td>С#,  OOP</td><td>Responsibility</td></tr>
+            <tr><td>SQL Server Management Studio</td><td>Teamwork</td></tr>
+            <tr><td>HTML (Semantic layout), CSS, Markdown</td><td>Public speaking skills</td></tr>
+            <tr><td>Strong knowledge of the basics of algorithmization and Boolean algebra</td><td>Professional interest</td></tr>
+            <tr><td>Git</td><td>Communication</td></tr>
+            <tr><td>Basic ASP.NET MVC knowledge</td><td></td></tr>
           </table>
         </div>
         <div class="information_in_list">
@@ -58,35 +57,17 @@
           <h2 id="courses">Courses</h2>
           <ul>
             <li>Course "ASP.NET Core MVC for .NET 5. Part One" by Udemy</li>
-            <li>Course "Python" by Stepik</li> 
             <li>Course "Command Line Basics" by Hexlet</li>
             <li>Course "Introduction to Git" by Hexlet</li>
             <li>Course "Introduction to the Internet" by Hexlet</li>
             <li>Course ".NET DEVELOPMENT. Self-study. The basic level" by epam training</li>
-            <li>Course "Fundamentals of Java" by Udemy</li>
-            <li>Course "Mobile development. Basics of Kotlin" by Udemy</li>
           </ul>
           <hr>
-          <h2 id="projects">Projects</h2>
+          <h2 id="work_experience">Work experience</h2>
           <ul>
-            <li>Start-up project "Mobile application for intelligent management of welding processes" (Kotlin, Java, Android Studio) <a href="https://github.com/VladislavDobrihlopez/WeldingStartup">GitHub of project</a></li>
+            <li>Start-up project "Mobile application for welding process control" (Adding new functionality in the server side of the project.<br> Tool: ASP.NET MVC)</li>
             <li>A pixel-art 2D "Apple pie" quest game (C#, Unity) <a href="https://github.com/DariaPers/Quest">GitHub of game</a></li> 
-            <li>Medical Assistant - a mobile app (Xamarin)</li>
           </ul>
-          <hr>
-          <h2 id="code_example">Example of code</h2>
-          <pre>
-            <code>
-              namespace Lab_4_Set<Br>
-              {<Br>
-                internal class TypeValidationException : Exception<Br>
-                {<Br>
-                    public TypeValidationException(string message)<Br>
-                      :base(message) { }<Br>
-                }<Br>
-              }
-            </code>
-           </pre>
         </div>
       </main>
       <footer>
