fix: change article

--- a/cv.html
+++ b/cv.html
@@ -33,14 +33,17 @@
       <main>
         <div class="info_article">
           <p> I'm a third-year student of speciality "Software Engineering" at the Belarusian-Russian University. 
-            I have knowledge of C#, ASP.NET MVC. Striving to apply my skills and learn new technologies in a collaborative environment.
+            I have knowledge of C#, ASP.NET MVC. At the moment I want to develop my skills in backend development and get work/internship experience in an it-company. 
+            I am interested in the topics of medicine and e-commerce. 
+            In the future I plan to connect my professional activity with full-stack development.  
+            Striving to apply my skills and learn new technologies in a collaborative environment.
           </p>
         </div>
         <div class="info_table">
           <table>
             <tr><th>Hard skills</th><th>Soft skills</th></tr>
             <tr><td>С#,  OOP</td><td>Responsibility</td></tr>
-            <tr><td>SQL Server Management Studio</td><td>Teamwork</td></tr>
+            <tr><td>Microsoft® SQL Server</td><td>Teamwork</td></tr>
             <tr><td>HTML (Semantic layout), CSS, Markdown</td><td>Public speaking skills</td></tr>
             <tr><td>Strong knowledge of the basics of algorithmization and Boolean algebra</td><td>Professional interest</td></tr>
             <tr><td>Git</td><td>Communication</td></tr>
