fix: change a link to repository

--- a/cv.html
+++ b/cv.html
@@ -69,7 +69,7 @@
           <h2 id="work_experience">Work experience</h2>
           <ul>
             <li>Start-up project "Mobile application for welding process control" (Adding new functionality in the server side of the project.<br> Tool: ASP.NET MVC)</li>
-            <li>A pixel-art 2D "Apple pie" quest game (C#, Unity) <a href="https://github.com/DariaPers/Quest">GitHub of game</a></li> 
+            <li>A pixel-art 2D "Apple pie" quest game (C#, Unity) <a href="https://github.com/DariaPers/Apple_Pie_Game">GitHub of game</a></li> 
           </ul>
         </div>
       </main>
