fix: fix mistake

--- a/cv.html
+++ b/cv.html
@@ -18,7 +18,7 @@
                 <p>Phone: + 375(44)74-65-626</p>
                 <p>E-mail: dariaerohova21@gmail.com</p>
                 <p>Social media: <a href="https://vk.com/dariaero">VK</a></p>
-                <p>Address: Thre Republic of Belarus, Mogilev</p>
+                <p>Address: The Republic of Belarus, Mogilev</p>
               </div>
             </div>
         </div>
